assets/css/main.css
* {
    font-family: Helvetica;
}

body {
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
    color: #000;
}

a:visited {
    color: #575b62;
}

.site-header {
    border-bottom: 1px solid #ccc;
    padding: 1em;
    margin-left: 3em;
    margin-right: 3em;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.site-identity h1 {
  font-size: 1.5em;
  font-weight: bold;
  margin: .6em 0;
  display: inline-block;
}

.site-navigation ul, 
.site-navigation li {
  margin: 0; 
  padding: 0;
}

.site-navigation li {
  display: inline-block;
  margin: 1.4em 1em 1em 1em;
  font-weight: bold;
}

#main {
    display: flex;
    margin-right: 3em;
    margin-left: 3em;
}

.sidebar {
    width: 280px;
    height: 100vh;
    box-sizing: border-box;
    position: fixed;
    transition: opacity 0.2s ease-in-out;
}
.sidebar img {
    padding: 5px;
    border: 1px solid #cecfd1;
    max-width: 110px;
    border-radius: 50%;
    width: 100%;
}
.sidebar>* {
    margin-top: 1em;
    margin-bottom: 1em; 
    display: block;
    padding: 10px;
    margin-bottom: 10px;
}
.sidebar .author__name {
    font-size: 1em;
}

.content {
    flex: 1;
    box-sizing: border-box;
    height: 100vh;
    margin-left: 280px;
    text-align: justify;
}
.content h1 {
    margin-top: 0.3em;
}
.content p {
    margin-right: 3em;
}

